Port to GTK+ 3.0
And remove PyGTK+ usage, as it would need to be completely
rewritten for PyGI support.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,4 +1,4 @@
-moduledir = $(libdir)/gtk-2.0/modules
+moduledir = $(libdir)/gtk-3.0/modules
 
 libgtkparasite_la_SOURCES = \
 	action-list.c \
@@ -10,10 +10,6 @@ libgtkparasite_la_SOURCES = \
 	prop-list.c \
 	property-cell-renderer.c \
 	property-cell-renderer.h \
-	python-hooks.c \
-	python-hooks.h \
-	python-shell.c \
-	python-shell.h \
 	widget-tree.h \
 	widget-tree.c \
 	window.c
@@ -22,7 +18,6 @@ libgtkparasite_la_LDFLAGS = \
 	-rpath $(moduledir) -module -avoid-version \
 	$(GTK_LIBS) \
 	$(PYGTK_LIBS) \
-	$(PYTHON_LIBS) \
 	@LDFLAGS@
 
 libgtkparasite_la_LIBADD =
@@ -30,13 +25,9 @@ libgtkparasite_la_LIBADD =
 
 module_LTLIBRARIES = libgtkparasite.la
 
-
-INCLUDES = \
-	$(GTK_CFLAGS) \
-	$(PYTHON_CFLAGS) \
-	$(PYGTK_CFLAGS) \
-	-DPYTHON_SHARED_LIB="\"$(PYTHON_SHARED_LIB)\""
+INCLUDES = $(GTK_CFLAGS)
 
 if HAVE_X11
 INCLUDES += -DHAVE_X11
 endif
+
